--- a/administration/index.html
+++ b/administration/index.html
@@ -32,6 +32,23 @@
 		</fieldset>
 	</div>
 	
+	<div id="url-list-box">
+		<table>
+			<thead>
+				<tr>
+					<td>URL</td>
+					<td>Actions</td>
+				</tr>
+			</thead>
+			<tbody id="url-list-body">
+			</tbody>
+		</table>
+	</div>
+	
+	<div id="throbber-box">
+		<img src="./img/throbber.gif" />
+	</div>
+	
 	<script type="text/javascript">
 		var us = new UrlShortener();
 	</script>
