Added QR code rendering and repaired JS method name mishmash.

--- a/administration/index.html
+++ b/administration/index.html
@@ -60,6 +60,8 @@
 	<div id="new-url-result-box">
 		<p>Your URL: <a id="new-url" href="#"></a> had been shorten to:	<a id="new-shorten-url" href="#"></a>.</p>
 		<p>You should easy copy it from this input: <input id="new-shorten-url-input" type="text" /></p>
+        <p>QR code of shortened link:</p>
+        <p><img id="qr-code" src="" alt="qrcode"  /></p>
 	</div>
 	
 	<div id="throbber-box">
