login form should be send by hitting enter

--- a/administration/index.html
+++ b/administration/index.html
@@ -62,6 +62,7 @@
     </div>
 
     <div id="login-box">
+    	<form method="post" action="." id="login-form">
 		<fieldset>
 			<legend>Login</legend>
 			<p><span>Username:</span><input type="text" id="username" /></p>
@@ -71,6 +72,7 @@
             <p><span>&nbsp;</span><input type="submit" value="Login" id="login-button" /></p>
 			<p id="login-error" class="error">Username or password is not correct.</p>
 		</fieldset>
+		</form>
 	</div>
 
 	<div id="throbber-box">
